--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - ./scrapy_test:/app/scrapy_test
     environment:
       - URLS_FILE=urls.txt
-    command: ["scrapy", "crawl", "website", "-o", "/app/output/output.json"]
+    command: ["scrapy", "crawl", "website", "-a", "urls_file=urls.txt", "-o", "/app/output/output.json"]
