--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     volumes:
       - ./output:/app/output
       - ./scrapy_test:/app/scrapy_test
-    command: ["scrapy", "crawl", "website", "-a", "urls_file=urls.txt", "-o", "/app/output/output.json"]
+    command: ["scrapy", "crawl", "website", "-a", "urls_file=urls.txt"]
